# DesafioTecnicoGraoDireto

./: .gitignore  README.md  clean_start.sh  compose.yaml
back_end/: Cargo.toml
back_end/src/: autenticacao.rs  database.rs  main.rs  token.rs
back_end/src/controladores/: cardapios.rs  misc.rs  mod.rs  restaurantes.rs
back_end/src/models/: cardapio.rs  mod.rs  restaurante.rs
dataset_importer/: pyproject.toml
dataset_importer/dataset_importer/: __init__.py
front_end/: pubspec.yaml
front_end/lib/: login.dart  main.dart  sandbox.dart
front_end/lib/Classes/: item_cardapio.dart  restaurante.dart
front_end/lib/DAO/: Usuario.dart  restaurantes.dart
front_end/lib/Telas/: busca.dart  dashboard.dart  detalhes_restaurante.dart  login.dart  restaurantes.dart
front_end/lib/Utils/: Crypto.dart  connection.dart  global_resources.dart
front_end/lib/Widgets/: input.dart  tile_categoria.dart  tile_restaurante.dart  transition.dart
front_end/test/: widget_test.dart
