[tool.poetry]
name = "dataset-importer"
version = "0.1.0"
description = ""
authors = ["João Pedro Sanches Dovichi <jsanchesdovichi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
